[package]
name = "rhping"
version = "0.1.0"
authors = ["James Punnett <jppunnett@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
reqwest = { version = "0.10.9", features = ["blocking"] }